--- a/Catchem/Config/Translations/translation.th.json
+++ b/Catchem/Config/Translations/translation.th.json
@@ -31,7 +31,7 @@
     },
     {
       "Key": "eventFortUsed",
-      "Value": "ค่าประสบการณ์: {0}, อัญมณี: {1}, ไอเทม: {2}"
+      "Value": "ชื่อ: {0}, ค่าประสบการณ์: {1}, อัญมณี: {2}, ไอเทม: {3}"
     },
     {
       "Key": "eventFortTargeted",
